--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "tooltip.js": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
